--- a/src/app/modules/projects/components/project/project.component.html
+++ b/src/app/modules/projects/components/project/project.component.html
@@ -55,8 +55,8 @@
                 <span class="input-group-text">Start Date</span>
             </div>
             <p-calendar *ngIf="mode==='create' || mode==='update'" showTime="true" showIcon="true"
-                [(ngModel)]="project.startDate" hideOnDateTimeSelect="true"></p-calendar>
-            <input *ngIf="mode==='read'" type="text" class="form-control" [(ngModel)]="project.startDate" readonly=true>
+                [(ngModel)]="project.startDate" appendTo="body" hideOnDateTimeSelect="true"></p-calendar>
+            <input *ngIf="mode==='read'" type="text" class="form-control" [(ngModel)]="project.startDate" placeHolder="project.startDate" readonly=true>
         </div>
 
     </div>
@@ -66,8 +66,8 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">End Date</span>
             </div>
-            <p-calendar *ngIf="mode==='create'" showTime="true" showIcon="true" [(ngModel)]="project.endDate"
-                hideOnDateTimeSelect="true"></p-calendar>
+            <p-calendar *ngIf="mode==='create' || mode==='update'" showTime="true" showIcon="true" [(ngModel)]="project.endDate"
+                hideOnDateTimeSelect="true" appendTo="body" hideOnDateTimeSelect="true"></p-calendar>
             <input *ngIf="mode==='read'" type="text" class="form-control" [(ngModel)]="project.endDate" readonly=true>
         </div>
     </div>
@@ -122,13 +122,22 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Team Members</span>
             </div>
-            <div *ngFor="let item of employees" class="ui-g">
+            <!-- <div *ngFor="let item of employees" class="ui-g">
                 <div class="ui-g-24" class="input-group-text"
                     style="padding:6px; margin:4px 4px 4px 8px; border:1px solid; background-color:#BBBBBB;">{{item}}
                 </div>
-            </div>
+            </div> -->
+            <table>
+                <tr *ngFor="let x of project.teamMembers;let i = index;" style="display:block; float:left;">
+                    <td><input style="margin:4px;" [(ngModel)]="project.teamMembers[i].empFirstName + 
+                        ' ' + project.teamMembers[i].empLastName" [readOnly]=true>
+                        {{x.Name}}
+                    </td>
+                </tr>
+            </table>
+            
         </div>
-        <p-listbox *ngIf="mode ==='create'" [options]="employeeDropdown" multiple="multiple" checkbox="checkbox"
+        <p-listbox *ngIf="mode ==='create' || mode==='update'" [options]="employeeDropdown" multiple="multiple" checkbox="checkbox"
             filter="filter" optionLabel="label" [style]="{'border-width':'0px','padding':'0px'}"
             [(ngModel)]="project.teamMembers" (click)="teamMemberSelect()"></p-listbox>
 
