--- a/src/app/modules/projects/pages/project-view/project-view.component.html
+++ b/src/app/modules/projects/pages/project-view/project-view.component.html
@@ -1,1 +1,14 @@
-<p>project-view works!</p>
+<div class="card mx-1">
+    <div class="card-body">
+        <!-- Title -->
+        <h3 class="display-4">Project</h3>
+
+        <app-project [project]="project" [mode]="mode" [alerts]="alerts" *ngIf="project"></app-project>
+
+        <!-- Action section-->
+        <div class="dropdown-divider my-3"></div>
+
+    </div>
+
+
+</div>
