--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -9,7 +9,7 @@
 
     </div>
     <div class="card">
-        <h4 class="card-header">Angular 8 JWT Login Example</h4>
+        <h4 class="card-header">Login</h4>
         <div class="card-body">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
@@ -32,7 +32,7 @@
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
-                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
+                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error.message}}</div>
             </form>
         </div>
     </div>
