--- a/src/app/modules/wp/pages/wp-create/wp-create.component.html
+++ b/src/app/modules/wp/pages/wp-create/wp-create.component.html
@@ -6,7 +6,8 @@
         <shared-alertPromp [alerts]="alerts"></shared-alertPromp>
 
 
-        <app-wp [wp]="wp" [mode]="mode"></app-wp>
+        <app-wp [wp]="wp" [mode]="mode" [validWpCode]="validWpCode"
+        (changeWpCode)="validateWpCode()" [alerts]="alerts"></app-wp>
 
         <!-- Action section-->
         <div class="dropdown-divider my-3"></div>
