--- a/src/app/modules/employee/component/employee/employee.component.html
+++ b/src/app/modules/employee/component/employee/employee.component.html
@@ -88,8 +88,25 @@
             <i *ngIf="!validEmployeeCode" class="material-icons error  my-2">error</i>
         </div>
     </div>
-    <div class="col-6"></div>
+    <div class="col-5">
+
+      <!-- Timesheet Approver -->
+      <div class="input-group">
+          <div class="input-group-prepend">
+              <span class="input-group-text">Approver</span>
+          </div>
+          <input type="text" class="form-control"
+              value="{{employee.timesheetApprover.empFirstName}} {{employee.timesheetApprover.empLastName}}" *ngIf="mode==='read'"
+              [readOnly]="true">
+          <p-dropdown class="form-control" [options]="employeeDropdown" [(ngModel)]="selectedApprover"
+              *ngIf="mode ==='create' || mode==='update'"
+              placeholder="{{employee.timesheetApprover ? employee.timesheetApprover.empFirstName + ' ' + employee.timesheetApprover.empLastName : 'choose an approver'}}"
+              optionLabel="label" [style]="{'border-width':'0px','padding':'0px'}"></p-dropdown>
+      </div>
+      <span *ngIf="alerts.supervisor" class="error my-2"><small>{{alerts.supervisor.msg}}</small></span>
+    </div>
     <div class="col-1"></div>
+    
 </div>
 <div class="  my-3"></div>
 <div class="form-row">
