--- a/src/app/modules/wp/component/wp.component.html
+++ b/src/app/modules/wp/component/wp.component.html
@@ -9,7 +9,8 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Project Name</span>
             </div>
-            <input type="text" class="form-control" [(ngModel)]="wp.projectName" [readOnly]="(mode ==='read' || mode==='update' || mode==='create')">
+            <input type="text" class="form-control" [(ngModel)]="wp.projectName"
+                [readOnly]="(mode ==='read' || mode==='update' || mode==='create')">
 
         </div>
     </div>
@@ -53,10 +54,10 @@
         <!--<span *ngIf="alerts.wpCode" class="error my-2"><small>{{alerts.wpCode.msg}}</small></span>-->
     </div>
     <div class="col-1">
-            <div *ngIf="(mode ==='create' || mode ==='update')">
-                <i *ngIf="validUsername" class="material-icons pass my-2">check_circle</i>
-                <i *ngIf="!validUsername" class="material-icons error  my-2">error</i>
-            </div>
+        <div *ngIf="(mode ==='create' || mode ==='update')">
+            <i *ngIf="validUsername" class="material-icons pass my-2">check_circle</i>
+            <i *ngIf="!validUsername" class="material-icons error  my-2">error</i>
+        </div>
     </div>
 </div>
 <div class="  my-3"></div>
@@ -79,12 +80,11 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Issue Date</span>
             </div>
-        <input id="weekEnd" type="text" placeholder="Datepicker" class="form-control" bsDatepicker
-            [outsideClick]="true" [bsConfig]="{selectWeek: true, dateInputFormat: 'YYYY-MM-DD' }"
-            [isDisabled]="(mode == 'read' || mode =='update')"    
-             value="{{ wp.issueDate | date:'yyyy-MM-dd' }}"
-            [readonly]="(mode == 'read' || mode =='update')"
-             /><!--(bsValueChange)="onValueChange($event)"-->
+            <input id="weekEnd" type="text" placeholder="Datepicker" class="form-control" bsDatepicker
+                [outsideClick]="true" [bsConfig]="{selectWeek: true, dateInputFormat: 'YYYY-MM-DD' }"
+                [isDisabled]="(mode == 'read' || mode =='update')" value="{{ wp.issueDate | date:'yyyy-MM-dd' }}"
+                [readonly]="(mode == 'read' || mode =='update')" />
+            <!--(bsValueChange)="onValueChange($event)"-->
         </div>
     </div>
     <div class="col-1"></div>
@@ -97,8 +97,8 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Responsible Engineer</span>
             </div>
-            <input type="text" class="form-control" value="{{wp.responsibleEngineer.employeeId}}"
-                *ngIf="mode==='read'" [readOnly]="true">
+            <input type="text" class="form-control" value="{{wp.responsibleEngineer.employeeId}}" *ngIf="mode==='read'"
+                [readOnly]="true">
             <p-dropdown class="form-control" [options]="engineerDropdown" [(ngModel)]="selectedEngineer"
                 *ngIf="mode ==='create' || mode==='update'"
                 placeholder="{{wp.responsibleEngineer ? wp.responsibleEngineer.employeeId : 'choose a Responsible Engineer'}}"
@@ -115,12 +115,10 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Parent W.P.</span>
             </div>
-            <input type="text" class="form-control"
-                value="{{wp.projectId}}" *ngIf="mode==='read'" [readOnly]="true">
+            <input type="text" class="form-control" value="{{wp.projectId}}" *ngIf="mode==='read'" [readOnly]="true">
             <p-dropdown class="form-control" [options]="parentWPDropdown" [(ngModel)]="selectedParent"
-                *ngIf="mode ==='create' || mode==='update'"
-                placeholder="{{'choose a Parent WP'}}"
-                optionLabel="label" [style]="{'border-width':'0px','padding':'0px'}"></p-dropdown>
+                *ngIf="mode ==='create' || mode==='update'" placeholder="{{'choose a Parent WP'}}" optionLabel="label"
+                [style]="{'border-width':'0px','padding':'0px'}"></p-dropdown>
         </div>
         <!--<span *ngIf="alerts.supervisor" class="error my-2"><small>{{alerts.supervisor.msg}}</small></span>-->
 
@@ -136,16 +134,15 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Workers</span>
             </div>
-            <input type="text" class="form-control" value="{{wp.workers.employeeId}}"
-                *ngIf="mode==='read'" [readOnly]="true">
+            <input type="text" class="form-control" value="{{wp.workers.employeeId}}" *ngIf="mode==='read'"
+                [readOnly]="true">
             <p-dropdown class="form-control" [options]="workerDropdown" [(ngModel)]="selectedWorker"
-                *ngIf="mode ==='create' || mode==='update'"
-                placeholder="{{'choose a Worker'}}"
-                optionLabel="label" [style]="{'border-width':'0px','padding':'0px'}"></p-dropdown>
+                *ngIf="mode ==='create' || mode==='update'" placeholder="{{'choose a Worker'}}" optionLabel="label"
+                [style]="{'border-width':'0px','padding':'0px'}"></p-dropdown>
         </div>
-    <div class="col-1"></div>
-</div>
-<div class="my-3"></div>
+        <div class="col-1"></div>
+    </div>
+    <div class="my-3"></div>
     <p-table #dt [columns]="cols" [value]="displayPackage" id="labourTable">
         <div class="form-row">
             <ng-template pTemplate="header" let-columns>
@@ -154,45 +151,7 @@
                         {{col.header}}
                     </th>
                 </tr>
-                <tr label="pmEAC">
-                    <th *ngFor="let col of columns" [ngSwitch]="col.field">
-                        <div *ngSwitchCase="'rowName'">PM EAC</div>
-                        <input [(ngModel)]="pm1" *ngSwitchCase="'1'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="pm2" *ngSwitchCase="'2'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="pm3" *ngSwitchCase="'3'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="pm4" *ngSwitchCase="'4'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="pm5" *ngSwitchCase="'5'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="pm6" *ngSwitchCase="'6'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="pm7" *ngSwitchCase="'7'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                    </th>
-                </tr>
-                <tr label="reBudget">
-                    <th *ngFor="let col of columns" [ngSwitch]="col.field">
-                        <div *ngSwitchCase="'rowName'">RE Budget</div>
-                        <input [(ngModel)]="re1" *ngSwitchCase="'1'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="re2" *ngSwitchCase="'2'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="re3" *ngSwitchCase="'3'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="re4" *ngSwitchCase="'4'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="re5" *ngSwitchCase="'5'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="re6" *ngSwitchCase="'6'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                        <input [(ngModel)]="re7" *ngSwitchCase="'7'" pInputText type="text" class="labourInput" 
-                            (keypress)="numberOnly($event)">
-                    </th>
-                </tr>
             </ng-template>
         </div>
-    </p-table> 
-<div class="dropdown-divider  my-3"></div>
+    </p-table>
+    <div class="dropdown-divider  my-3"></div>
