--- a/src/app/modules/reports/pages/project-report-view/project-report-view.component.html
+++ b/src/app/modules/reports/pages/project-report-view/project-report-view.component.html
@@ -1,7 +1,7 @@
 <div class="card mx-1">
     <div class="card-body">
         <!-- Title -->
-        <h3 class="display-4">Work Package Report Detail</h3>
+        <h3 class="display-4">Project Cost Performance Report</h3>
 
         <!-- BODY -->
 
