--- a/src/app/modules/reports/pages/reports.component.html
+++ b/src/app/modules/reports/pages/reports.component.html
@@ -1,2 +1,4 @@
 <!-- <app-wp-report-creation></app-wp-report-creation> -->
 <app-project-report-view></app-project-report-view>
+<app-wp-report-view></app-wp-report-view>
+<app-project-report-list></app-project-report-list>
